change hermen's link to weibo

--- a/en/index.html
+++ b/en/index.html
@@ -124,7 +124,7 @@
         </div>
       </li>
       <li>
-        <a href='https://github.com/threeday0905' target='new'>
+        <a href='http://weibo.com/threeday0905' target='new'>
           <img src='/images/speakers/3.jpg' />
           <div class='cover'>
             <div class='info'>
