Here as part of the NodeBots community not JBA.

--- a/en/index.html
+++ b/en/index.html
@@ -294,7 +294,7 @@
           <div class='cover'>
             <div class='info'>
               <h4>Andrew Fisher</h4>
-              <p>JBA</p>
+              <p>NodeBots</p>
             </div>
         </a>
         </div>
