add new speaker

--- a/en/index.html
+++ b/en/index.html
@@ -277,17 +277,17 @@
         </a>
         </div>
       </li>
-      <!--       <li>
-        <a href='' target='new'>
+      <li>
+        <a href='https://github.com/niyue' target='new'>
           <img src='/images/speakers/17.jpg' />
           <div class='cover'>
             <div class='info'>
-              <h4></h4>
-              <p></p>
+              <h4>Yue Ni</h4>
+              <p>Splunk</p>
             </div>
         </a>
         </div>
-      </li> -->
+      </li>
       <li>
         <a href='https://github.com/ajfisher' target='new'>
           <img src='/images/speakers/18.jpg' />
@@ -561,8 +561,9 @@
           <li>
             <time>15:20</time>
             <div>
-              <h4>To be confirm</h4>
-              <p></p>
+              <h4>Persistent data structure in JS land: implementing immutable frontend using react.js
+</h4>
+              <p>Yue Ni</p>
             </div>
           </li>
           <li>
