--- a/en/index.html
+++ b/en/index.html
@@ -352,7 +352,7 @@
           <li>
             <time>09:15</time>
             <div>
-              <h4>Openning</h4>
+              <h4>Opening</h4>
               <p>Goddy Zhao</p>
             </div>
           </li>
