--- a/en/index.html
+++ b/en/index.html
@@ -29,7 +29,7 @@
 <meta name='msapplication-config' content='/assets/favicons/browserconfig.xml'> -->
 
   <!-- CSS -->
-  <link href='/assets/styles.css?v=20150626' rel='stylesheet' type='text/css'/>
+  <link href='/assets/styles.css?v=20150605' rel='stylesheet' type='text/css'/>
 </head>
 
 
@@ -628,7 +628,7 @@
           <a href='http://www.qiniu.com/' target='new'><img src='/images/sponsors/qiniu.png' width='230' /></a>
           <a href='http://careers.ef.com/cn/categories/technology/' target='new'><img src='/images/sponsors/ef.png' width='140' /></a><br/>
           <a href='https://www.splunk.com/' target='new'><img src='/images/sponsors/splunk.png' width='170' /></a>
-          <a href='http://www.ucloud.cn/' target='new'><img src='/images/sponsors/ucloud.png' width='190' /></a><br/>
+          <a href='http://www.ucloud.cn/' target='new'><img src='/images/sponsors/ucloud.png?' width='170' /></a><br/>
           <a href='https://www.teambition.com/' target='new' class="c-type"><img src='/images/sponsors/teambition.png' width='160' /></a>
           <a href='http://www.upyun.com/' target='new' class="c-type"><img src='/images/sponsors/upyun.png' width='150' /></a>
           <a href='https://bearychat.com/' target='new' class="c-type"><img src='/images/sponsors/bearyinnovative.png' height='90' /></a>
