add oshk to media partner list

--- a/index.html
+++ b/index.html
@@ -643,7 +643,8 @@
           <a href='http://www.broadview.com.cn/' target='new'><img src='/images/sponsors/broadview.png' width='150' /></a>
           <a href='https://cnodejs.org/' target='new'><img src='/images/sponsors/cnode.png' width='150' /></a>
           <a href='http://www.ptpress.com.cn/default.aspx' target='new'><img src='/images/sponsors/ptpress.png' width='150' /></a>
-          <a href='https://www.oneapm.com/' target='new'><img src='/images/sponsors/oneapm.png' width='80' /></a>
+          <a href='https://www.oneapm.com/' target='new'><img src='/images/sponsors/oneapm.png' width='75' /></a>
+          <a href='http://opensource.hk' target='new'><img src='/images/sponsors/oshk.png' width='150' /></a>
         </div>
         <h3>特别感谢</h3>
         <div class='supporter'>
