add map and update the logo of epam

--- a/code-of-conduct-en/index.html
+++ b/code-of-conduct-en/index.html
@@ -30,6 +30,7 @@
 
   <!-- CSS -->
   <link href='/assets/styles.css?v=20150605' rel='stylesheet' type='text/css'/>
+  <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
 </head>
 
 <body class='page-code-of-conduct-en code-of-conduct'>
