--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <!-- CSS -->
   <link href='/assets/styles.css?v=20150605' rel='stylesheet' type='text/css'/>
+  <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
 </head>
 
 
@@ -626,13 +627,15 @@
         <div>
           <a href='http://wiredcraft.com/' target='new'><img src='/images/sponsors/wiredcraft.png' width='300' /></a>
           <a href='http://www.qiniu.com/' target='new'><img src='/images/sponsors/qiniu.png' width='230' /></a>
-          <a href='http://careers.ef.com/cn/categories/technology/' target='new'><img src='/images/sponsors/ef.png' width='140' /></a><br/>
+          <a href='http://careers.ef.com/cn/categories/technology/' target='new'><img src='/images/sponsors/ef.png' width='140' /></a>
+          <br/>
           <a href='https://www.splunk.com/' target='new'><img src='/images/sponsors/splunk.png' width='170' /></a>
-          <a href='http://www.ucloud.cn/' target='new'><img src='/images/sponsors/ucloud.png?' width='170' /></a><br/>
+          <a href='http://www.ucloud.cn/' target='new'><img src='/images/sponsors/ucloud.png?' width='170' /></a>
+          <br/>
           <a href='https://www.teambition.com/' target='new' class="c-type"><img src='/images/sponsors/teambition.png' width='160' /></a>
           <a href='http://www.upyun.com/' target='new' class="c-type"><img src='/images/sponsors/upyun.png' width='150' /></a>
           <a href='https://bearychat.com/' target='new' class="c-type"><img src='/images/sponsors/bearyinnovative.png' height='90' /></a>
-          <a href='http://www.epam.com/' target='new' class="c-type"><img src='/images/sponsors/epam.png' width='140' /></a>
+          <a href='http://www.epam.com/' target='new' class="c-type"><img src='/images/sponsors/epam.png' width='130' /></a>
           <a href='https://coding.net/' target='new' class="c-type"><img src='/images/sponsors/coding.png' width='160' /></a>
         </div>
         <h3>合作媒体</h3>
@@ -655,6 +658,7 @@
         </div>
       </div>
     </section>
+
     <!-- Venue -->
     <section class='section venue' id='item5'>
       <div class='wrapper'>
@@ -665,8 +669,8 @@
           <p>广东省深圳市东滨路与临海路交汇处前海深港现代服务业合作区内</p>
           <a target='new' href='http://qh.vanke.com/'>http://qh.vanke.com/</a>
         </div>
-        <div class='right'>
-          <img src='/images/venue.jpg' />
+        <div class='map'>
+        <div id="dituContent"></div>
         </div>
       </div>
     </section>
@@ -705,23 +709,133 @@
 </div>
 
     </footer>
-    <!-- JS -->
-    <script src='/assets/scripts.js' type='text/javascript'></script>
-    <!--[if lt IE 9]><script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script><![endif]-->
-    <script type='text/javascript'>
-  var _gauges = _gauges || [];
-  (function() {
-    var t   = document.createElement('script');
-    t.type  = 'text/javascript';
-    t.async = true;
-    t.id    = 'gauges-tracker';
-    t.setAttribute('data-site-id', '54ee7d005dd053560400c9bd');
-    t.src = '//secure.gaug.es/track.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(t, s);
-  })();
-</script> 
   </body>
+  <script type="text/javascript">
+//创建和初始化地图函数：
+function initMap() {
+  createMap(); //创建地图
+  setMapEvent(); //设置地图事件
+  addMapControl(); //向地图添加控件
+  addMarker(); //向地图中添加marker
+}
+
+//创建地图函数：
+function createMap() {
+  var map = new BMap.Map("dituContent"); //在百度地图容器中创建一个地图
+  var point = new BMap.Point(113.910269, 22.523468); //定义一个中心点坐标
+  map.centerAndZoom(point, 17); //设定地图的中心点和坐标并将地图显示在地图容器中
+  window.map = map; //将map变量存储在全局
+}
+
+//地图事件设置函数：
+function setMapEvent() {
+  map.enableDragging(); //启用地图拖拽事件，默认启用(可不写)
+  map.enableScrollWheelZoom(); //启用地图滚轮放大缩小
+  map.enableDoubleClickZoom(); //启用鼠标双击放大，默认启用(可不写)
+  map.enableKeyboard(); //启用键盘上下左右键移动地图
+}
+
+//地图控件添加函数：
+function addMapControl() {
+  //向地图中添加缩放控件
+  var ctrl_nav = new BMap.NavigationControl({
+    anchor: BMAP_ANCHOR_TOP_LEFT,
+    type: BMAP_NAVIGATION_CONTROL_SMALL
+  });
+  map.addControl(ctrl_nav);
+  //向地图中添加缩略图控件
+  var ctrl_ove = new BMap.OverviewMapControl({
+    anchor: BMAP_ANCHOR_BOTTOM_RIGHT,
+    isOpen: 0
+  });
+  map.addControl(ctrl_ove);
+  //向地图中添加比例尺控件
+  var ctrl_sca = new BMap.ScaleControl({
+    anchor: BMAP_ANCHOR_BOTTOM_LEFT
+  });
+  map.addControl(ctrl_sca);
+}
+
+//标注点数组
+var markerArr = [{
+  title: "深圳前海万科企业公馆(特区馆)",
+  content: "Qianhai&nbsp;Vanke&nbsp;Enterprise&nbsp;Dream&nbsp;Park&nbsp;-&nbsp;Special&nbsp;Zone&nbsp;Mansion",
+  point: "113.909415|22.523434",
+  isOpen: 0,
+  icon: {
+    w: 23,
+    h: 25,
+    l: 46,
+    t: 21,
+    x: 9,
+    lb: 12
+  }
+}];
+//创建marker
+function addMarker() {
+    for (var i = 0; i < markerArr.length; i++) {
+      var json = markerArr[i];
+      var p0 = json.point.split("|")[0];
+      var p1 = json.point.split("|")[1];
+      var point = new BMap.Point(p0, p1);
+      var iconImg = createIcon(json.icon);
+      var marker = new BMap.Marker(point, {
+        icon: iconImg
+      });
+      var iw = createInfoWindow(i);
+      var label = new BMap.Label(json.title, {
+        "offset": new BMap.Size(json.icon.lb - json.icon.x + 10, -20)
+      });
+      marker.setLabel(label);
+      map.addOverlay(marker);
+      label.setStyle({
+        borderColor: "#808080",
+        color: "#333",
+        cursor: "pointer"
+      });
+
+      (function() {
+        var index = i;
+        var _iw = createInfoWindow(i);
+        var _marker = marker;
+        _marker.addEventListener("click", function() {
+          this.openInfoWindow(_iw);
+        });
+        _iw.addEventListener("open", function() {
+          _marker.getLabel().hide();
+        })
+        _iw.addEventListener("close", function() {
+          _marker.getLabel().show();
+        })
+        label.addEventListener("click", function() {
+          _marker.openInfoWindow(_iw);
+        })
+        if (!!json.isOpen) {
+          label.hide();
+          _marker.openInfoWindow(_iw);
+        }
+      })()
+    }
+  }
+  //创建InfoWindow
+function createInfoWindow(i) {
+    var json = markerArr[i];
+    var iw = new BMap.InfoWindow("<b class='iw_poi_title' title='" + json.title + "'>" + json.title + "</b><div class='iw_poi_content'>" + json.content + "</div>");
+    return iw;
+  }
+  //创建一个Icon
+function createIcon(json) {
+  var icon = new BMap.Icon("http://app.baidu.com/map/images/us_mk_icon.png", new BMap.Size(json.w, json.h), {
+    imageOffset: new BMap.Size(-json.l, -json.t),
+    infoWindowOffset: new BMap.Size(json.lb + 5, 1),
+    offset: new BMap.Size(json.x, json.h)
+  })
+  return icon;
+}
+
+initMap(); //创建和初始化地图
+
+  </script>
 
 </html>
 
