--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               <div>
                 <h4>Database Everywhere: a Reactive Data Architecture for JavaScript Frontends
 </h4>
-                <p>尤雨溪</p>
+                <p>尤雨溪 <a href='https://github.com/JacksonTian/shenjs'>Slide</a></p>
               </div>
             </li>
             <li>
@@ -381,7 +381,7 @@
               <time>11:00</time>
               <div>
                 <h4>koa 和 toa 的框架原理及开发实践</h4>
-                <p>严清</p>
+                <p>严清 <a href='http://www.zensh.org/slides/2015toakoa/index.html'>Slide</a></p>
               </div>
             </li>
             <li>
