--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
               <time>10:30</time>
               <div>
                 <h4>p2p pipes</h4>
-                <p>Mathias Buus</p>
+                <p>Mathias Buus <a href='https://github.com/mafintosh/slides/tree/gh-pages/jsconf-china-2015'>Slides</a></p>
               </div>
             </li>
             <li>
