Update index.html: fix the wrong slide.

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               <div>
                 <h4>Database Everywhere: a Reactive Data Architecture for JavaScript Frontends
 </h4>
-                <p>尤雨溪 <a href='https://github.com/JacksonTian/shenjs'>Slide</a></p>
+                <p>尤雨溪</p>
               </div>
             </li>
             <li>
@@ -495,7 +495,7 @@
               <div>
                 <h4>调优利器：node profiler
 </h4>
-                <p>朴灵</p>
+                <p>朴灵 <a href='https://github.com/JacksonTian/shenjs'>Slide</a></p>
               </div>
             </li>
             <li>
