Updating domain name

--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -91,7 +91,7 @@
        
 <div class='wrapper'>
   <a href='/code-of-conduct' target="_self">Code Of Conduct</a>
-  <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+  <a href='http://jsconfchina.com' target="new">JSConf China</a>
   <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
   <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
   <div class='right'>
