--- a/en/index.html
+++ b/en/index.html
@@ -76,10 +76,10 @@
       <div class='timeline'>
         <div class='wrapper'>
           <ul>
-            <li><a href='http://2012.jsconf.cn' target='new'><h4>HUJS</h4><em>2012</em></a></li>
-            <li><a href='http://2013.jsconf.cn' target='new'><h4>JINGJS</h4><em>2013</em></a></li>
-            <li><a href='http://2014.jsconf.cn' target='new'><h4>HANGJS</h4><em>2014</em></a></li>
-            <li class='active'><a href='http://2015.jsconf.cn' target='new'><h4>SHENJS</h4><em>2015</em></a></li>
+            <li><a href='http://2012.jsconfchina.com' target='new'><h4>HUJS</h4><em>2012</em></a></li>
+            <li><a href='http://2013.jsconfchina.com' target='new'><h4>JINGJS</h4><em>2013</em></a></li>
+            <li><a href='http://2014.jsconfchina.com' target='new'><h4>HANGJS</h4><em>2014</em></a></li>
+            <li class='active'><a href='http://2015.jsconfchina.com' target='new'><h4>SHENJS</h4><em>2015</em></a></li>
           </ul>
         </div>
         <div class='line'></div>
@@ -88,7 +88,7 @@
     <!-- Banner -->
     <section class='banner first'>
       <div class='left'>
-        <a href='https://jsconf.cn' target='new'>Learn more about JSConf China</a>
+        <a href='https://jsconfchina.com' target='new'>Learn more about JSConf China</a>
       </div>
       <div class='right'>
         <a href='https://github.com/jsconfcn/ShenJS/issues' target='new'>Wanna help out? <strong>Join us on GitHub!</strong>
@@ -699,7 +699,7 @@
          
 <div class='wrapper'>
   <a href='/code-of-conduct-en' target="_self">Code Of Conduct</a>
-  <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+  <a href='http://jsconfchina.com' target="new">JSConf China</a>
   <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
   <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
   <div class='right'>
