--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
       <div class='timeline'>
         <div class='wrapper'>
           <ul>
-            <li><a href='http://2012.jsconf.cn' target='new'><h4>沪JS</h4><em>2012</em></a></li>
-            <li><a href='http://2013.jsconf.cn' target='new'><h4>京JS</h4><em>2013</em></a></li>
-            <li><a href='http://2014.jsconf.cn' target='new'><h4>杭JS</h4><em>2014</em></a></li>
-            <li class='active'><a href='http://2015.jsconf.cn' target='new'><h4>深JS</h4><em>2015</em></a></li>
+            <li><a href='http://2012.jsconfchina.com' target='new'><h4>沪JS</h4><em>2012</em></a></li>
+            <li><a href='http://2013.jsconfchina.com' target='new'><h4>京JS</h4><em>2013</em></a></li>
+            <li><a href='http://2014.jsconfchina.com' target='new'><h4>杭JS</h4><em>2014</em></a></li>
+            <li class='active'><a href='http://2015.jsconfchina.com' target='new'><h4>深JS</h4><em>2015</em></a></li>
           </ul>
         </div>
         <div class='line'></div>
@@ -88,7 +88,7 @@
     <!-- Banner -->
     <section class='banner first'>
       <div class='left'>
-        <a href='https://jsconf.cn' target='new'>了解更多关于JS中国开发者大会</a>
+        <a href='https://jsconfchina.com' target='new'>了解更多关于JS中国开发者大会</a>
       </div>
       <div class='right'>
         <a href='https://github.com/jsconfcn/ShenJS/issues' target='new'>想参与讨论？<strong>在Github上加入我们！</strong>
@@ -700,7 +700,7 @@
 
 <div class='wrapper'>
   <a href='/code-of-conduct' target="_self">Code Of Conduct</a>
-  <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+  <a href='http://jsconfchina.com' target="new">JSConf China</a>
   <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
   <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
   <div class='right'>
